# proj_news_viz

./: .gitignore  Makefile  README.md  iz.py  pyproject.toml  requirements.txt  sentiment_lenta.ipynb  tools.py  tox.ini  tvzvezda.py  w2vCreate.ipynb
analysis/: README.md  news_source_analysis_gazeta.ipynb  news_source_analysis_interfax.ipynb  news_source_analysis_iz.ipynb  news_source_analysis_meduza.ipynb  news_source_analysis_ria.ipynb  news_source_analysis_rt.ipynb
data/news_databases/: csv_to_sqlite.py
nlp/: README.md  requirements.txt
nlp/data/: README.md
nlp/experiments/: README.md
nlp/extracting_ner/: extracting_NER.ipynb  names.csv
nlp/ner/: README.md  cleanedNames.py  cleaned_names.ipynb  cleaned_names_rd.ipynb
nlp/news_viz/: README.md
nlp/pipeline/: normalizer.py  pipeline.py  pipeline_example-Copy1.ipynb  pipeline_example.ipynb  preprocess.py  stopwords.txt  tm_functions.py  util.py  visualizer.py
nlp/preprocessing/: preprocess.ipynb  preprocessing_tools.py  preprocessing_tools_updt.py  stopwords.txt
nlp/references/: README.md  vt-cleaned_names.ipynb
nlp/topic_models/: GuidedLDA.ipynb  README.md  Topic_modelling.ipynb  clean_lemmatization_text.py  requirements.txt  tm_corextopic.ipynb  tm_functions.py  tp_lda-sklearn.ipynb  (+1 more)
scraping/: requirements.txt
scrapping/: add_topics.ipynb  async_downloader.py  download_news.py  downloader.py  find_feeds.py  find_news.py  get_feed_url.py  html_parser.py  parse_news.py  prepare_webhose.ipynb  requirements.txt  store.py
visualization/: bump_chart.ipynb  readme.md
website/: README.md
(+264 files in other folders)
