[tool.poetry]
name = "proj_news_viz"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
readability-lxml = "^0.7.0"
lmdb = "^0.94.0"
aiohttp = "^3.4"
requests = ">=2.19"
feedparser = "^5.2"
lxml = ">= 4.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
ipython = "^7.0"
notebook = "^5.7"
jupyter = "^1.0"
fake-useragent = "^0.1.11"
pandas = "^0.23.4"
tqdm = "^4.26"
ipywidgets = "^7.4"
